@@ -167,7 +167,7 @@ Now you've got a real Debian system, though rather lean, on disk.
 <command>Chroot</command> into it:
 
 <informalexample><screen>
-# chroot /mnt/debinst /bin/bash
+# LANG= chroot /mnt/debinst /bin/bash
 </screen></informalexample>
 
 </para>
