@@ -32,12 +32,12 @@ accessible from either OS 9 or OS X.
 
 </para><para>
 
-GNU/Linux is unable to access information on HFS+ (aka MacOS Extended)
-or UFS partitions. OS X requires one of these two types for its boot
-partition. MacOS 9 can be installed on either HFS (aka MacOS Standard)
-or HFS+. To share information between the MacOS and GNU/Linux systems,
-an exchange partition is handy. HFS and MS-DOS FAT partitions are
-supported by both MacOS and Linux. 
+GNU/Linux is unable to access information on UFS partitions, but does
+support HFS+ (aka MacOS Extended) partitions. OS X requires one of these
+two types for its boot partition. MacOS 9 can be installed on either HFS
+(aka MacOS Standard) or HFS+. To share information between the MacOS and
+GNU/Linux systems, an exchange partition is handy. HFS, HFS+ and MS-DOS FAT
+partitions are supported by both MacOS and Linux. 
 
 </para>
   </sect2>
